# cellxgene-mcp

./: .gitignore  README.md  mcp-config-stdio-debug.json  mcp-config-stdio.json  mcp-config.json  pyproject.toml  server.py
src/cellxgene_mcp/: __init__.py  server.py
test/: test_basic.py
