[project]
name = "cellxgene-mcp"
version = "0.1.0"
description = "MCP for CZ CELLxGENE Discover Census"
readme = "README.md"
authors = [
    { name = "antonkulaga", email = "antonkulaga@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "eliot>=1.17.5",
    "pycomfort>=0.0.18",
    "fastmcp>=2.8.0",
    "fastapi>=0.115.12",
    "cellxgene-census>=1.17.0",
    "cellxgene>=1.3.0"
]

[project.scripts]
cellxgene-mcp = "cellxgene_mcp.server:cli_app_stdio"
server = "cellxgene_mcp.server:cli_app"
stdio = "cellxgene_mcp.server:cli_app_stdio"
sse = "cellxgene_mcp.server:cli_app_sse"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cellxgene_mcp"]

[tool.hatch.build]
exclude = [
    "*.log",
    "logs/",
    "images/",
    ".venv/",
    ".pytest_cache/",
    "test/",
    # Exclude temporary files
    "temp*.h5ad",
    "temp*.csv",
    "debug*.h5ad",
]

[dependency-groups]
dev = [
    "just-agents-core>=0.7.4",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.8.0",
]

# Override conflicting dependencies
[tool.uv]
override-dependencies = [
    "s3fs>=2021.6.1",  # Force the newer version that cellxgene-census needs, ignoring cellxgene's s3fs==0.4.2 requirement
] 